--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
 { id: 28, name: "Plan 28", invest: 2530, daily: 200.01, validity: 365 },
 { id: 29, name: "Plan 29", invest: 2640, daily: 210.88, validity: 365 },
 { id: 30, name: "Plan 30", invest: 2750, daily: 220.75, validity: 365 },
-            { id: 31, name: "Plan 31", invest: 4070, daily: 290.6, validity: 365 }
+            { id: 31, name: "Plan 31", invest: 4070, daily: 290.6, validity: 365 },
+            { id: 32, name: "Plan 32", invest: 5500, daily: 438.3, validity: 365 }
         ];
         
         const sidebar = document.querySelector('.sidebar');
